--- a/src/layouts/card-list/card-list.css
+++ b/src/layouts/card-list/card-list.css
@@ -1,6 +1,6 @@
 .cardList {
     width: 100%;
-    min-height: max(30rem, 100%);
+    min-height: 100%;
     height: 1px;
     max-height: 100%;
     overflow-y: hidden;
@@ -11,10 +11,9 @@
 
 .cardList__body {
     width: 100%;
-    min-height: 40rem;
     display: grid;
     grid-template-columns: repeat(auto-fill, 13rem);
-    grid-auto-rows: 1fr;
+    grid-auto-rows: min-content;
     overflow-y: auto;
     &::-webkit-scrollbar {
         display: none;
